refactor: stopped using ChatColor